--- a/cloud-provider-hystrix-payment8001/pom.xml
+++ b/cloud-provider-hystrix-payment8001/pom.xml
@@ -12,6 +12,11 @@
     <artifactId>cloud-provider-hystrix-payment8001</artifactId>
 
     <dependencies>
+        <!--包含了sleuth+zipkin-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-zipkin</artifactId>
+        </dependency>
         <!--hystrix-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
