--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,9 @@
       <module>cloud-stream-rabbitmq-provider8801</module>
       <module>cloud-stream-rabbitmq-consumer8802</module>
     <module>cloud-stream-rabbitmq-consumer8803</module>
+    <module>cloudalibaba-provider-payment9001</module>
+    <module>cloudalibaba-provider-payment9002</module>
+    <module>cloudalibaba-consumer-nacos-order83</module>
   </modules>
 
   <!-- 统一管理jar包版本 -->
@@ -53,6 +56,7 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+      <!-- 两个springcloud  喜欢哪个用哪个 -->
       <!--spring cloud Hoxton.SR1-->
       <dependency>
         <groupId>org.springframework.cloud</groupId>
